--- a/client/app/modules/protocols/views/list.html
+++ b/client/app/modules/protocols/views/list.html
@@ -47,13 +47,28 @@
      	</div>
      	
      	<div class="panel-body">
-        <h4>{{item.intention_type|ucfirst}} {{item.general_type}} <span ng-show="item.intention_disease">for</span> 
-        <a ng-href="{{item.intention_disease.link}}" target="_blank" ng-show="item.intention_disease" title="{{item.intention_disease.id}}"> {{item.intention_disease.label}}</a>
-          <span ng-show="item.technical_sources[0].technical_institute">by</span> {{item.technical_sources[0].technical_institute}}</h4>
-          <span ng-show="item.initial_expression.label">
-          <strong>Initial conditions : </strong><br>
-          <span ng-bind-html="item.initial_expression.label"></span>
-          </span>
+                
+                
+        <h4> <b>  {{protocol.general_type|ucfirst}} {{protocol.general_gender}} <span ng-show="protocol.intention_disease.label">
+          <span ng-show="protocol.technical_sources[0].technical_institute">by</span> {{protocol.technical_sources[0].technical_institute}}</b>
+        </h4>
+          
+        <h4>Related Conditions</h4>
+        <ul>
+          <li ng-repeat="condition in protocol.general_conditions track by $index">
+          <a ng-href="{{condition.link}}" title="{{condition.id}}" target="_blank" >
+             <b>{{condition.label}}</b>
+          </a>
+          </li>
+        </ul>
+      
+        <p ng-show="protocol.divergion_type" class="lead">
+          Derived from <a ng-href="/#/protocols/{{protocolParent.id}}">{{protocolParent.general_name}}</a> as 
+          {{(protocol.divergion_type==='other'?protocol.divergion_other:protocol.divergion_type)}}  </p>
+      
+          <h4>Entry points</h4>
+          <p ng-bind-html="protocol.initial_expression.label"></p>
+                
       </div>
       
     </div>
