--- a/client/app/modules/protocols/views/view.html
+++ b/client/app/modules/protocols/views/view.html
@@ -84,7 +84,7 @@
                   Derived from <a ng-href="/#/protocols/{{protocolParent.id}}">{{protocolParent.general_name}}</a> as 
                   {{(protocol.divergion_type==='other'?protocol.divergion_other:protocol.divergion_type)}}  </p>
               
-                  <h4>Initial conditions</h4>
+                  <h4>Entry points</h4>
                   <p ng-bind-html="protocol.initial_expression.label"></p>
                   <hr>
               
@@ -106,7 +106,7 @@
                   
                   <hr>
                   
-                  <h4>Outcomes</h4>
+                  <h4>Exit points</h4>
                   <ul>
                     <li ng-repeat="outcome in protocol.outcomes track by $index">
                     <a ng-href="{{outcome.link}}" target="_blank" >
