--- a/client/app/modules/protocols/views/view.html
+++ b/client/app/modules/protocols/views/view.html
@@ -52,8 +52,7 @@
       <div class="panel-heading">{{protocol.general_name}}</div>
       <div class="panel-body">
               <div class="col-sm-6">
-                <h4>Type: 
-                <b>  {{protocol.general_type|ucfirst}} {{protocol.general_gender}} <span ng-show="protocol.intention_disease.label">
+                <h4><b>  {{protocol.general_type|ucfirst}} {{protocol.general_gender}} <span ng-show="protocol.intention_disease.label">
           <span ng-show="protocol.technical_sources[0].technical_institute">by</span> {{protocol.technical_sources[0].technical_institute}}</b>
           </h4>
           
