changes as agreed with drosatos

--- a/client/app/modules/core/views/home.html
+++ b/client/app/modules/core/views/home.html
@@ -22,7 +22,7 @@
 
           <div class="row">
                 <div class="container">
-                  <label class="btn btn-warning" ng-model="graphbutton.protocols" btn-checkbox>Protocols</label>
+                  <label class="btn btn-warning" ng-model="graphbutton.protocols" btn-checkbox>Care Plans</label>
                   <label class="btn btn-danger" ng-model="graphbutton.healthcenters" btn-checkbox>Health centers</label>
                   <label class="btn btn-primary" ng-model="graphbutton.doctors" btn-checkbox>Doctors</label>
               
