--- a/client/app/modules/protocols/views/form.html
+++ b/client/app/modules/protocols/views/form.html
@@ -1,7 +1,7 @@
 <h4>
     <a href="" ui-sref="^.list" class="btn btn-default"><i class="fa fa-arrow-left"></i></a>
-    <span ng-show="!protocol.id" translate>Add a new protocol</span>
-    <span ng-show="protocol.id" translate>Edit protocol</span>
+    <span ng-show="!protocol.id" translate>Add a new Care Plan</span>
+    <span ng-show="protocol.id" translate>Edit Care Plan</span>
 </h4>
 
 
@@ -144,7 +144,7 @@
     <div class="col-md-12" ng-show="isadmin">
         <div class="box box-primary">
             <div class="box-header">
-                <h3 class="box-title">Protocol</h3>
+                <h3 class="box-title">Care Plan</h3>
             </div>
             <div class="box-body">
                 <pre>{{protocol|json}}</pre>
