--- a/client/app/modules/protocols/views/view.html
+++ b/client/app/modules/protocols/views/view.html
@@ -49,18 +49,30 @@
     
       
     <div class="panel panel-default">
-      <div class="panel-heading">{{protocol.general_name}}</div>
+      <div class="panel-heading"><div style="font-size: 16px; font-weight: bold;">{{protocol.general_name}}</div></div>
       <div class="panel-body">
+              <div class="col-xs-12">
+                <h5><b>Description</b></h5>
+                <p ng-show="!showFullDesc">{{protocol.general_desc | truncate: 100: '...'}}
+                  <a style="cursor:pointer"ng-click="showFullDesc=!showFullDesc"><u>More</u></a>
+                </p>
+                <p ng-show="showFullDesc">{{protocol.general_desc}}
+                <a style="cursor:pointer"ng-click="showFullDesc=!showFullDesc"><u>Less</u></a>
+                </p>
+                <hr>
+              </div>
               <div class="col-sm-6">
-                <h4><b>  {{protocol.general_type|ucfirst}} {{protocol.general_gender}} <span ng-show="protocol.intention_disease.label">
-          <span ng-show="protocol.technical_sources[0].technical_institute">by</span> {{protocol.technical_sources[0].technical_institute}}</b>
-          </h4>
-          
-                <h4>Related Conditions</h4>
+                <!--General information-->
+                
+                <h5><b>Genre</b>: {{protocol.general_gender|ucfirst}}</h5>
+                <h5><b>Type</b>: {{protocol.general_type|ucfirst}}</h5>
+
+                
+                <h5><b>Related Health Issues</b>: </h5>
                 <ul>
                   <li ng-repeat="condition in protocol.general_conditions track by $index">
                   <a ng-href="{{condition.link}}" title="{{condition.id}}" target="_blank" >
-                     <b>{{condition.label}}</b>
+                     {{condition.label}}
                   </a>
                   </li>
                 </ul>
@@ -69,80 +81,89 @@
               </div>
               <div class="col-sm-6">
                 
-                <h4>Downloads & links</h4>
+                <!--Deviation type-->
+                <h5 ng-show="protocol.divergion_type" ><b>Deviation</b>: From <a ng-href="/#/protocols/{{protocolParent.id}}">{{protocolParent.general_name}}</a> 
+                  because of  {{(protocol.divergion_type==='other'?protocol.divergion_other:protocol.divergion_type)}}</h5>
+                
+                
+                <!--Technical sources-->
+                <h5><b>Sources</b>:</h5>
                 <ul>
                   <li ng-repeat="source in protocol.technical_sources">
-                    <a ng-href="{{source.technical_url}}" target="blank">{{source.technical_type}}</a>
+                    <span>{{source.technical_type}}: </span>
+                    <a ng-href="{{source.technical_url}}" ng-if="source.technical_type==='file'" target="blank"> 
+                      ({{getFileExtension(source.technical_file.file)}}) {{source.technical_file.file.name | truncate: 30: '...'}}
+                    </a>
+                    <a ng-href="{{source.technical_url}}" ng-if="source.technical_type==='url'" target="blank"> 
+                      {{source.technical_url|truncate: 30: '...' }}
+                    </a>
                   </li>
                 </ul>
               
               </div>
               <div class="col-xs-12">
+                <hr>
+                <!--Entry Points/Initial conditions-->
+                <h5><b>Entry points</b>: </h5>
+                  <p style="font-weight:initial;" ng-bind-html="protocol.initial_expression.label"></p>
+                <hr>
                 
-                <p ng-show="protocol.divergion_type" class="lead">
-                  Derived from <a ng-href="/#/protocols/{{protocolParent.id}}">{{protocolParent.general_name}}</a> as 
-                  {{(protocol.divergion_type==='other'?protocol.divergion_other:protocol.divergion_type)}}  </p>
-              
-                  <h4>Entry points</h4>
-                  <p ng-bind-html="protocol.initial_expression.label"></p>
-                  <hr>
-              
-                  <h4>Description</h4>
-                  <p>{{protocol.general_desc}}</p>
-                  <hr>
-                  <h4>Evidence list</h4>
-                  <ol>
-                    <li ng-repeat="article in protocol.evidences track by $index">
-                      <a ng-href="http://www.ncbi.nlm.nih.gov/pubmed/{{article.pmid}}" target="_blank" class="list-group-item-heading" ng-bind-html="article.title"></a>
-                  
-                      <p>
-                          <b>PMID</b> : {{article.pmid}} 
-                          <br>
-                          <b>Authors</b> : {{article.authorString}} &copy;{{article.pubYear}}
-                      </p>
-                    </li>
-                  </ol>
-                  
-                  <hr>
-                  
-                  <h4>Exit points</h4>
+                <!--Exit Points-->
+                <h5><b>Exit points</b>: </h5>
+                <ul>
+                  <li ng-repeat="outcome in protocol.outcomes track by $index">
+                  <a ng-href="{{outcome.link}}" target="_blank" >
+                     {{outcome.label}}
+                  </a>
+                  </li>
+                </ul>
+                <hr>
+
+                <!--Resource Requirements-->
+                <div ng-if="protocol.resources_infastructure && protocol.resources_infastructure.length>0">
+                <h5><b>Equipment requirements</b>: </h5>
+                <ul>
+                  <li ng-repeat="res in protocol.resources_infastructure track by $index">
+                                <a ng-href="{{res.link}}" title="{{res.id}}">
+                    {{res.label}}</a>
+                  </li>
+                </ul>
+                </div>
+                <div ng-if="protocol.resources_human && protocol.resources_human.length>0">
+                  <h5><b>Medical expert requirements</b>: </h5>
                   <ul>
-                    <li ng-repeat="outcome in protocol.outcomes track by $index">
-                    <a ng-href="{{outcome.link}}" target="_blank" >
-                       <b>{{outcome.label}}</b>
-                    </a>
-                    </li>
-                  </ul>
+                  <li ng-repeat="res in protocol.resources_human track by $index">
+                                <a ng-href="{{res.link}}" title="{{res.id}}">
+                    {{res.label}}</a>
+                  </li>
+                </ul>
+                </div>
+                <div ng-if="protocol.resources_pharmaceutical && protocol.resources_pharmaceutical.length>0">
+                  <h5><b>Drug Requirements</b>: </h5>
+                  <ul>
+                  <li ng-repeat="res in protocol.resources_pharmaceutical track by $index">
+                                <a ng-href="{{res.link}}" title="{{res.id}}">
+                    {{res.label}}</a>
+                  </li>
+                </ul>
+                </div>
+                <hr>
+      
+                <!--Issuing Body and Evidence-->
+                <h5><b>Issuing Body</b>: {{protocol.issuing_body}}</h5>
+                <h5><b>Evidence sources</b>: </h5>
+                <ol>
+                  <li ng-repeat="article in protocol.evidences track by $index">
+                    <a ng-href="http://www.ncbi.nlm.nih.gov/pubmed/{{article.pmid}}" target="_blank" class="list-group-item-heading" ng-bind-html="article.title"></a>
                 
-                  <hr>
-                  <div ng-if="protocol.resources_infastructure && protocol.resources_infastructure.length>0">
-                  <h4>Equipment requirements</h4>
-                  <ul>
-                    <li ng-repeat="res in protocol.resources_infastructure track by $index">
-                                  <a ng-href="{{res.link}}" title="{{res.id}}">
-                      {{res.label}}</a>
-                    </li>
-                  </ul>
-                  </div>
-                  <div ng-if="protocol.resources_human && protocol.resources_human.length>0">
-                    <h4>Medical expert requirements</h4>
-                    <ul>
-                    <li ng-repeat="res in protocol.resources_human track by $index">
-                                  <a ng-href="{{res.link}}" title="{{res.id}}">
-                      {{res.label}}</a>
-                    </li>
-                  </ul>
-                  </div>
-                  <div ng-if="protocol.resources_pharmaceutical && protocol.resources_pharmaceutical.length>0">
-                    <h4>Drug Requirements</h4>
-                    <ul>
-                    <li ng-repeat="res in protocol.resources_pharmaceutical track by $index">
-                                  <a ng-href="{{res.link}}" title="{{res.id}}">
-                      {{res.label}}</a>
-                    </li>
-                  </ul>
-                  </div>
-            
+                    <p>
+                        PMID: {{article.pmid}} 
+                        <br>
+                        Authors: {{article.authorString}} &copy;{{article.pubYear}}
+                    </p>
+                  </li>
+                </ol>
+                
               </div>
               
               
