better style for export btn

--- a/client/app/modules/protocols/views/form.html
+++ b/client/app/modules/protocols/views/form.html
@@ -2,7 +2,7 @@
     <a href="" ui-sref="^.list" class="btn btn-default"><i class="fa fa-arrow-left"></i></a>
     <span ng-show="!protocol.id" translate>Add a new Care Plan</span>
     <span ng-show="protocol.id" translate>Edit Care Plan</span>
-    <button ng-click="exportToXML(protocol)">Export to XML</button>
+    <button class="btn btn-xs btn-primary" ng-click="exportToXML(protocol)">Export to XML</button>
 </h4>
 
 
