update register form

--- a/client/app/modules/users/views/register.html
+++ b/client/app/modules/users/views/register.html
@@ -1,11 +1,10 @@
 <div class="lockscreen" style="height: 100%">
   <div class="form-box" id="login-box">
         <span class="pull-right image" style="margin: 15px 20px; float: left;">
-            <img gravatar-src="registration.email" class="img-circle" alt="User Image" gravatar-size="50">
+            <img gravatar-src="registration.email" alt="User Image" gravatar-size="50">
         </span>
 
     <div class="header" style="text-align: left; padding-left: 25px;" translate>Register</div>
-
     <form name="joinForm" class="form-signin" role="form" ng-submit="register()">
       <div class="body bg-gray">
         <div class="callout callout-danger" ng-if="registerError">
