--- a/client/app/modules/users/views/login.html
+++ b/client/app/modules/users/views/login.html
@@ -1,7 +1,7 @@
 <div class="lockscreen" style="height: 100%">
   <div class="form-box" id="login-box">
         <span class="pull-right image" style="margin: 15px 20px; float: left;">
-            <img gravatar-src="credentials.email" class="img-circle" alt="User Image" gravatar-size="50">
+            <img gravatar-src="credentials.email" alt="User Image" gravatar-size="50">
         </span>
 
     <div class="header" style="text-align: left; padding-left: 25px;" translate>Sign In</div>
